tests/NormalTests/paczka2/big_fuzzy/31483015.err
Error in line 1: A499 A561 73,1
Error in line 9: A499 A499 366,7
Error in line 17: MQOxJVsg A514 49,
Error in line 2: m1Hm2 S160 67,5
Error in line 28: Ei7xJnXk0D A499 51,2
Error in line 36: aV05UG A561 72,1
Error in line 37: A499 A499 13,5
Error in line 55: qa0 A499 90,53
Error in line 51: Ei7xJnXk0D A499 94,0
Error in line 50: qa0 A499 68,9
Error in line 57: Ei7xJnXk0D A561 56,0
Error in line 56: A499 A514 5,6
Error in line 63: Ei7xJnXk0D S160 24,5
Error in line 69: Ei7xJnXk0D A499 29,5
Error in line 70: Ei7xJnXk0D A514 53,9
Error in line 78: aV0>UG A>14 243,>
Error in line 79: MQOxJVsg A499 35,3
Error in line 83: Y1QSgxKBLUU A499 95,0
Error in line 77: aV05UG A514 55,6
Error in line 93: Ei7xJnXk0D A4 11,
Error in line 88: aV05UG A561 38,9
Error in line 94: aV05UG S160 4,6
Error in line 98: aV05UG A561 3,7
Error in line 100: Ei7xJnXk0D A499 387,3
Error in line 82: qa0 A514 89,1
Error in line 105: Ei7xJnXk0D A561 10,6
Error in line 103: aV05UG A499 25,8
Error in line 118: qa0 A499 75,4
Error in line 127: aV05UG A514 56,6
Error in line 139: A4 A4 10,0
Error in line 132: A499 A514 94,0
Error in line 137: qa0 A499 85,2
Error in line 146: m1Hm2 S160 37,4
Error in line 141: A499 A561 72,7
Error in line 154: A499 S160 70,2
Error in line 145: Y1QSgxKBLUU S160 75,1
Error in line 161: MQOxJVsg A514 98,30
Error in line 156: A499 A514 52,5
Error in line 163: A499 A499 54,0
Error in line 166: m1Hm2 S160 53,3
Error in line 164: MQOxJVsg S160 78,4
Error in line 176: Ei7xJnXk0D A499 69,8
Error in line 182: aV05UG A561 :0:,5
Error in line 173: MQOxJVsg A499 96,5
Error in line 190: aV05UG A561 56,0
Error in line 193: MQOxJVsg A514 29,5
Error in line 197: aV05UG A514 30,9
Error in line 209: Ei7xJnXk0D A499 68,40
Error in line 213: Y1QSgxKBLUU S160 86,1
Error in line 218: Y1QSgxKBLUU A5P1 53,1
Error in line 220: aV05UG A561 69,7
Error in line 224: aV05UG A499 15,7
Error in line 226: qa0 A561 50,6
Error in line 216: Y1QSgxKBLUU A561 44,6
Error in line 243: aV05UG A561 83,6
Error in line 246: Y1QSgxKBLUU A514 52,8
